🛠️ : Fix dark mode and add dark mode cache

--- a/css/style_0_0_1.css
+++ b/css/style_0_0_1.css
@@ -10,6 +10,7 @@
 :root {
   --background-color: white;
   --font-color: black;
+
 }
 
 body {
@@ -19,6 +20,12 @@ body {
   font-family: "Handjet", cursive;
   font-size: 20px;
   letter-spacing: 1px;
+  transition: 0.5s
+
+}
+
+body::after{
+    opacity: 0;
 }
 
 header {
@@ -204,7 +211,7 @@ a:hover {
   list-style: none;
   width: 20px;
   height: 20px;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(200, 200, 200, 0.3);
   animation: animate 25s linear infinite;
   bottom: -150px;
   z-index: -1;
